--- a/angular/Mapas/src/index.html
+++ b/angular/Mapas/src/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Animaciones</title>
+  <title>Mapas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9CobDD06h6vgzmUpmoKIpCgSXc43B7B0&libraries=places,directions"></script>
 </head>
 
 <body>
